==> ChibiOS/ChibiOS-Contrib/os/hal/ports/NUMICRO/LLD/SERIALv1/hal_serial_lld.c <==
#include "hal.h"
#define NUC123_BRD_MAX       0xFFFFUL
#define NUC123_DIVIDER_X_MAX 0xF
#define NUC123_BRD_MODE0 ((0UL << UART_BAUD_DIV_X_EN_Pos) | (0UL << UART_BAUD_DIV_X_ONE_Pos))
#define NUC123_BRD_MODE1 ((1UL << UART_BAUD_DIV_X_EN_Pos) | (0UL << UART_BAUD_DIV_X_ONE_Pos))
#define NUC123_BRD_MODE2 ((1UL << UART_BAUD_DIV_X_EN_Pos) | (1UL << UART_BAUD_DIV_X_ONE_Pos))
#define NUC123_SERIAL_MODE_IrDA (2UL << UART_FUN_SEL_FUN_SEL_Pos)
#define NUC123_SERIAL_MODE_RS485 (3UL << UART_FUN_SEL_FUN_SEL_Pos)
#define UART1_nCTS_PinSelect()                                              \
  do {                                                                      \
    SYS->ALT_MFP &= ~SYS_ALT_MFP_PB7_MFP1_Msk;                              \
    SYS->GPB_MFP |= (1 << 7);                                               \
  } while (0)
#define UART1_nCTS_PinUnselect()                                            \
  do {                                                                      \
    SYS->ALT_MFP &= ~SYS_ALT_MFP_PB7_MFP1_Msk;                              \
    SYS->GPB_MFP &= ~(1 << 7);                                              \
  } while (0)
#define UART1_nRTS_PinSelect()                                              \
  do {                                                                      \
    SYS->ALT_MFP &= ~SYS_ALT_MFP_PB6_MFP1_Msk;                              \
    SYS->GPB_MFP |= (1 << 6);                                               \
  } while (0)

static void notify0(io_queue_t* qp)
{
  (void)qp;
  UART0->IER |= UART_IER_THRE_IEN_Msk;
}

static void notify1(io_queue_t* qp)
{
  (void)qp;
  UART1->IER |= UART_IER_THRE_IEN_Msk;
}

void sd_lld_init(void)
{

#if NUC123_SERIAL_USE_UART0
  sdObjectInit(&SD0, NULL, notify0);
  /* Select UART0 Pins */
  SYS->ALT_MFP &= ~(SYS_ALT_MFP_PB3_MFP1_Msk | SYS_ALT_MFP_PB3_MFP1_Msk);
  SYS->GPB_MFP |= 0x0FUL;
  SD0.uart = UART0;
#endif

#if NUC123_SERIAL_USE_UART1
  sdObjectInit(&SD1, NULL, notify1);
  /* Select UART1 Pins */
  SYS->ALT_MFP &= ~(SYS_ALT_MFP_PB7_MFP1_Msk | SYS_ALT_MFP_PB6_MFP1_Msk |
                    SYS_ALT_MFP_PB5_MFP1_Msk | SYS_ALT_MFP_PB4_MFP1_Msk);
  SYS->GPB_MFP |= 0xF0UL;
  SD1.uart = UART1;
#endif
}

void sd_lld_start(SerialDriver* sdp, const SerialConfig* config)
{

  if (!config) {
    config = &default_config;
  }

  if (sdp->state == SD_STOP) {
#if NUC123_SERIAL_USE_UART0
    if (&SD0 == sdp) {
      CLK->APBCLK |= CLK_APBCLK_UART0_EN_Msk;
      CLK->CLKSEL1 = (CLK->CLKSEL1 & ~(CLK_CLKSEL1_UART_S_Msk)) | NUC123_SERIAL_CLKSRC;
      nvicEnableVector(UART0_IRQn, NUC123_SERIAL_UART0_IRQ_PRIORITY);
      SYS->IPRSTC2 |= SYS_IPRSTC2_UART0_RST_Msk;
      SYS->IPRSTC2 &= ~(SYS_IPRSTC2_UART0_RST_Msk);
    }
#endif
#if NUC123_SERIAL_USE_UART1
    if (&SD1 == sdp) {
      CLK->APBCLK |= CLK_APBCLK_UART1_EN_Msk;
      nvicEnableVector(NUC123_UART1_IRQn, NUC123_SERIAL_UART1_IRQ_PRIORITY);
      SYS->IPRSTC2 |= SYS_IPRSTC2_UART1_RST_Msk;
      SYS->IPRSTC2 &= ~(SYS_IPRSTC2_UART1_RST_Msk);
    }
#endif
  }

  /* Configures the peripheral.*/

  osalDbgAssert((NUC123_SERIAL_CLK % config->speed == 0),
                "NUC123_SERIAL_CLK % config->speed must be 0 or speed cannot be generated");
  uint32_t baud_found = false;

  /* Speed is controlled by the expression
      BAUD = UART_CLK / (m * (BRD + 2))
  Here, baud_denom represents the (m * (BRD + 2)) part of the expression */
  uint32_t baud_denom = (NUC123_SERIAL_CLK / config->speed);

  /* Mode 0: m = 16 */
  if ((baud_denom % 16 == 0) && (((baud_denom / 16) - 2) <= NUC123_BRD_MAX)) {
    sdp->uart->BAUD = NUC123_BRD_MODE0 | ((baud_denom / 16) - 2);
    baud_found      = true;
  }

  /* If the peripheral is in IrDA mode, it can only use baud generation mode 0 */
  else if (config->mode != NUC123_SERIAL_MODE_IrDA) {

    /* Mode 2: m = 1. The exact behavior of mode 2 varies depending on
        a) the model of the chip
        b) UART_CLK relative to HCLK
    */
#if defined(NUC123xxxANx)
#if NUC123_SERIAL_CLK <= NUC123_HCLK
    if ((9 <= (baud_denom - 2)) && ((baud_denom - 2) <= NUC123_BRD_MAX)) {
      sdp->uart->BAUD = NUC123_BRD_MODE2 | (baud_denom - 2);
      baud_found      = true;
    }
#elif NUC123_SERIAL_CLK <= (2 * NUC123_HCLK)
    if ((15 <= (baud_denom - 2)) && ((baud_denom - 2) <= NUC123_BRD_MAX)) {
      sdp->uart->BAUD = NUC123_BRD_MODE2 | (baud_denom - 2);
      baud_found      = true;
    }
#elif NUC123_SERIAL_CLK <= (3 * NUC123_HCLK)
    if ((21 <= (baud_denom - 2)) && ((baud_denom - 2) <= NUC123_BRD_MAX)) {
      sdp->uart->BAUD = NUC123_BRD_MODE2 | (baud_denom - 2);
      baud_found      = true;
    }
#else
    /* Dummy statement to prevent an orphaned else at the begining of the Mode 1 block */
    if (FALSE) {
    }
#endif
#elif defined(NUC123xxxAEx)
    /* TODO: Implement the specific requirements for the AE series */
    /* Dummy statement to prevent an orphaned else at the begining of the Mode 1 block */
    if (FALSE) {
    }
#endif
    /* Mode 1: m = (DIVIDER_X + 1),  8 <= DIVIDER_X <= 16 */
    else {
      for (uint32_t m = 9; m <= (NUC123_DIVIDER_X_MAX + 1); ++m) {
        if ((baud_denom % m == 0) && ((baud_denom / m) - 2 <= NUC123_BRD_MAX)) {
          sdp->uart->BAUD =
              NUC123_BRD_MODE1 | ((m - 1) << UART_BAUD_DIVIDER_X_Pos) | ((baud_denom / m) - 2);
          baud_found = true;
          break;
        }
      }
    }
  }

  /* If we couldn't generate the desired frequency from any of the available modes, halt */
  osalDbgCheck(baud_found);

  sdp->uart->FUN_SEL = config->mode & UART_FUN_SEL_FUN_SEL_Msk;
  sdp->uart->LCR     = config->data | config->parity | config->stop;
  sdp->uart->IER     = UART_IER_RLS_IEN_Msk | UART_IER_RDA_IEN_Msk | UART_IER_BUF_ERR_IEN_Msk;
  sdp->uart->FCR &= ~UART_FCR_RFITL_Msk;
}

void sd_lld_stop(SerialDriver* sdp)
{

  if (sdp->state == SD_READY) {
#if NUC123_SERIAL_USE_UART0
    if (&SD0 == sdp) {
      CLK->APBCLK &= ~CLK_APBCLK_UART0_EN_Msk;
      nvicDisableVector(UART0_IRQn);
      return;
    }
#endif

#if NUC123_SERIAL_USE_UART1
    if (&SD1 == sdp) {
      CLK->APBCLK &= ~CLK_APBCLK_UART1_EN_Msk;
      nvicDisableVector(NUC123_UART1_IRQn);
      return;
    }
#endif

    sdp->uart->FUN_SEL = 0;
    sdp->uart->LCR     = 0;
    sdp->uart->BAUD    = 0;
  }
}
