==> ChibiOS/ChibiOS-Contrib/os/hal/ports/MSP430X/hal_serial_lld.c <==
#include "hal.h"
#define MSP430X_USCI_A0_USED
#define MSP430X_USCI_A1_USED
#define MSP430X_USCI_A2_USED
#define MSP430X_USCI_A3_USED

static void notify0(io_queue_t * qp) {

  (void)qp;
  UCA0IE |= UCTXIE;
}

static void notify1(io_queue_t * qp) {

  (void)qp;
  UCA1IE |= UCTXIE;
}

void sd_lld_init(void) {

#if MSP430X_SERIAL_USE_USART0 == TRUE
  sdObjectInit(&SD0, NULL, notify0);
#endif

#if MSP430X_SERIAL_USE_USART1 == TRUE
  sdObjectInit(&SD1, NULL, notify1);
#endif

#if MSP430X_SERIAL_USE_USART2 == TRUE
  sdObjectInit(&SD2, NULL, notify2);
#endif

#if MSP430X_SERIAL_USE_USART3 == TRUE
  sdObjectInit(&SD3, NULL, notify3);
#endif
}

void sd_lld_start(SerialDriver * sdp, const SerialConfig * config) {

  if (config == NULL) {
    config = &default_config;
  }

  if (sdp->state == SD_STOP) {
#if MSP430X_SERIAL_USE_USART0 == TRUE
    if (&SD0 == sdp) {
      usart0_init(config);
    }
#endif
#if MSP430X_SERIAL_USE_USART1 == TRUE
    if (&SD1 == sdp) {
      usart1_init(config);
    }
#endif
#if MSP430X_SERIAL_USE_USART2 == TRUE
    if (&SD2 == sdp) {
      usart2_init(config);
    }
#endif
#if MSP430X_SERIAL_USE_USART3 == TRUE
    if (&SD3 == sdp) {
      usart3_init(config);
    }
#endif
  }
}

void sd_lld_stop(SerialDriver * sdp) {

  if (sdp->state == SD_READY) {
#if MSP430X_SERIAL_USE_USART0 == TRUE
    if (&SD0 == sdp) {
      UCA0CTLW0 = UCSWRST;
    }
#endif
#if MSP430X_SERIAL_USE_USART1 == TRUE
    if (&SD1 == sdp) {
      UCA1CTLW0 = UCSWRST;
    }
#endif
#if MSP430X_SERIAL_USE_USART2 == TRUE
    if (&SD2 == sdp) {
      UCA2CTLW0 = UCSWRST;
    }
#endif
#if MSP430X_SERIAL_USE_USART3 == TRUE
    if (&SD3 == sdp) {
      UCA3CTLW0 = UCSWRST;
    }
#endif
  }
}
